fix phot grids and font sizes on mobile

--- a/style_boardgame.css
+++ b/style_boardgame.css
@@ -1,3 +1,16 @@
+:root {
+  --font-size-22: min(3vw, 22px);
+  --font-size-28: min(4vw, 28px);
+  --font-size-32: min(5vw, 32px);
+  --font-size-52: min(8vw, 52px);
+  --font-size-82: min(10vw, 82px);
+}
+
+video {
+  width: 100%;
+  height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -6,18 +19,18 @@ h4 {
 }
 
 h1 {
-  font-size: 82;
+  font-size: var(--font-size-82);
   margin: 0;
   padding-bottom: 0.5%;
 }
 
 h2 {
-  font-size: 52;
+  font-size: var(--font-size-52);
   margin: 0;
 }
 
 h3 {
-  font-size: 32;
+  font-size: var(--font-size-32);
   font-weight: lighter;
   margin: 0;
 }
@@ -27,12 +40,12 @@ h3 {
 }
 
 h4 {
-  font-size: 28;
+  font-size: var(--font-size-28);
   margin: 0;
 }
 
 p {
-  font-size: 22;
+  font-size: var(--font-size-22);
   font-weight: light;
   color: black;
   margin: 0;
@@ -140,6 +153,23 @@ body {
     "sleeve instructions piece"
     "sleeve instructions piece"
     "sleeve instructions piece";
+}
+
+@media only screen and (max-width: 1024px) {
+  .photos {
+    height: 600%;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(7, 1fr);
+    grid-gap: 30px;
+    grid-template-areas:
+      "prototypes"
+      "bcontents"
+      "bag"
+      "play"
+      "sleeve"
+      "instructions"
+      "piece";
+  }
 }
 
 .photos div {
@@ -275,7 +305,7 @@ body {
 .arrow_left_name {
   display: block;
   color: #2b706b;
-  font-size: 28;
+  font-size: var(--font-size-28);
   text-decoration: none;
   white-space: nowrap;
   display: flex;
@@ -288,7 +318,7 @@ body {
 .arrow_right_name {
   display: block;
   color: #2b706b;
-  font-size: 28;
+  font-size: var(--font-size-28);
   text-decoration: none;
   white-space: nowrap;
   display: flex;
