--- a/style_titlesequences.css
+++ b/style_titlesequences.css
@@ -1,3 +1,16 @@
+v:root {
+  --font-size-22: min(3vw, 22px);
+  --font-size-28: min(4vw, 28px);
+  --font-size-32: min(5vw, 32px);
+  --font-size-52: min(8vw, 52px);
+  --font-size-82: min(10vw, 82px);
+}
+
+video {
+  width: 100%;
+  height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -6,18 +19,18 @@ h4 {
 }
 
 h1 {
-  font-size: 82;
+  font-size: var(--font-size-82);
   margin: 0;
   padding-bottom: 0.5%;
 }
 
 h2 {
-  font-size: 52;
+  font-size: var(--font-size-52);
   margin: 0;
 }
 
 h3 {
-  font-size: 32;
+  font-size: var(--font-size-32);
   font-weight: lighter;
   margin: 0;
 }
@@ -27,12 +40,12 @@ h3 {
 }
 
 h4 {
-  font-size: 28;
+  font-size: var(--font-size-28);
   margin: 0;
 }
 
 p {
-  font-size: 22;
+  font-size: var(--font-size-22);
   font-weight: light;
   color: black;
   margin: 0;
@@ -78,7 +91,7 @@ header {
 .button_home {
   font-family: inherit;
   background-color: #893d62;
-  font-size: 52px;
+  font-size: var(--font-size-52);
   font-weight: bolder;
   border: none;
   color: white;
@@ -98,7 +111,7 @@ header {
 
 ul {
   font-weight: 500;
-  font-size: 28;
+  font-size: var(--font-size-28);
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -217,6 +230,25 @@ li a:hover {
     "front_cover front_cover back_cover"
     "golden_arm1 golden_arm2 back_cover_open"
     "golden_arm1 golden_arm2 back_cover_open";
+}
+
+@media only screen and (max-width: 1024px) {
+  .photos {
+    height: 600%;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, 1fr);
+    grid-gap: 30px;
+    grid-template-areas:
+      "internal_MG"
+      "sculpture_display"
+      "external_MG"
+      "front_cover"
+      "signage"
+      "back_cover"
+      "golden_arm1"
+      "golden_arm2"
+      "back_cover_open";
+  }
 }
 
 .photos div {
@@ -359,7 +391,7 @@ li a:hover {
 .arrow_left_name {
   display: block;
   color: #893d62;
-  font-size: 28;
+  font-size: var(--font-size-28);
   text-decoration: none;
   white-space: nowrap;
   display: flex;
@@ -372,7 +404,7 @@ li a:hover {
 .arrow_right_name {
   display: block;
   color: #893d62;
-  font-size: 28;
+  font-size: var(--font-size-28);
   text-decoration: none;
   white-space: nowrap;
   display: flex;
